# esp-vi

./: .gitignore  CMakeLists.txt  README.md  mcurses-idf copy.c.old  sdkconfig  sdkconfig.old  usb.c
components/OpenVi/: CMakeLists.txt  GNUmakefile
components/OpenVi/cl/: cl.h  cl_funcs.c  cl_funcs.d  cl_main.c  cl_read.c  cl_screen.c  cl_term.c
components/OpenVi/common/: ex_def.h  exf.c  key.c  main.c  msg.c  options.c  options_def.h  recover.c
components/OpenVi/db/btree/: bt_open.c
components/OpenVi/db/hash/: hash_page.c
components/OpenVi/db/mpool/: mpool.c
components/OpenVi/db/recno/: rec_close.c  rec_open.c
components/OpenVi/ex/: ex.c  ex_argv.c  ex_bang.c  ex_cd.c  ex_cmd.c  ex_filter.c  ex_init.c  ex_script.c  ex_script.d  ex_shell.c  ex_subst.c  ex_tag.c  script.h
components/OpenVi/include/: ex_extern.h  patch_term.h  poll.h
components/OpenVi/include/sys/: types.h
components/OpenVi/mcurses/: CMakeLists.txt
components/OpenVi/openbsd/: getprogname.c  issetugid.c  setmode.c
components/OpenVi/patch/: patch_term.c
components/OpenVi/regex/: engine.c
components/OpenVi/vi/: v_ex.c  v_increment.c  v_scroll.c  v_search.c  v_txt.c  vi.c  vs_msg.c  vs_refresh.c
components/OpenVi/xinstall/: xinstall.c
components/newlib/: CMakeLists.txt  unistd.c
components/newlib/platform_include/sys/: dirent.h
main/: CMakeLists.txt  esp-vi.c  idf_component.yml  mcurses-idf.c
test/: a.out  main.c  test.tmp
